fix header layout bug

--- a/views/themes/help/assets/stylesheets/help/help.scss
+++ b/views/themes/help/assets/stylesheets/help/help.scss
@@ -10,7 +10,7 @@
 .qor-help__header {
     background-color: #fff;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 3px 5px 0 rgba(0, 0, 0, .12);
-    margin: -7px -24px 24px;
+    margin: 0 -24px 24px;
     padding: 4px 24px;
     .select2-container--default .select2-selection--single .select2-selection__rendered {
         font-size: 14px;
